оформление карточек в списках

--- a/public/index.html
+++ b/public/index.html
@@ -26,90 +26,94 @@
             </div>
         </div>
     </header>
-    <section class="promo">
-        <div class="container">
-            <div class="promo__slide">
-                <div class="promo__img">
-                    <img src="./img/Book lover.gif" alt="" class="gif">
-                </div>
-                <div class="promo__text">
-                    <h1>bookish buddy —</h1>
-                    <p class="promo__descr">место, где книги становятся мостом к дружбе</p>
-                    <button><a href="register.html" class="a_link_main">Поехали!</a></button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="about" id="about">
-        <div class="container">
-            <div class="about__slide">
-                <h2 class="title">О нас</h2>
-                <div class="blocks__about">
-
-                    <div class="block__about">
-                        <div class="block__about__img"><img src="./img/book_heart.svg" alt=""></div>
-                        <div class="block__about__text">
-                            <p>Собирай полку из полюбившихся книг</p>
-                        </div>
+    <main>
+        <section class="promo">
+            <div class="container">
+                <div class="promo__slide">
+                    <div class="promo__img">
+                        <img src="./img/Book lover.gif" alt="" class="gif">
                     </div>
-
-                    <div class="block__about">
-                        <div class="block__about__img"><img src="./img/bokks.svg" alt=""></div>
-                        <div class="block__about__text">
-                            <p>Составляй списки для дальнейшего чтения</p>
-                        </div>
-                    </div>
-
-                    <div class="block__about">
-                        <div class="block__about__img"><img src="./img/book_pageup.svg" alt=""></div>
-                        <div class="block__about__text">
-                            <p>Оставляй свои впечатления о прочитанном</p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="questions" id="questions">
-        <div class="container">
-            <div class="questions__slide">
-                <h2 class="title">Часто задаваемые вопросы</h2>
-                <div class="accordion" id="accordion-1" style="max-width: 800px; margin: 0 auto;">
-                    <div class="accordion__item accordion__item_show">
-                        <div class="accordion__header">
-                            По какому принципу работает Ваша система?
-                        </div>
-                        <div class="accordion__body">
-                            В нашей системе авторизированные пользователи имеют возможность составлять свои списки книг
-                            и управлять ими.
-                        </div>
-                    </div>
-                    <div class="accordion__item">
-                        <div class="accordion__header">
-                            Какие данные требуются для регистрации?
-                        </div>
-                        <div class="accordion__body">
-                            Для регистрации необходим номер телефона, а также надежный пароль. Эти личные данные
-                            останутся в системе недоступными для других пользователей.
-                        </div>
-                    </div>
-                    <div class="accordion__item">
-                        <div class="accordion__header">
-                            О каких списках идет речь?
-                        </div>
-                        <div class="accordion__body">
-                            Из виртуальной библиотеки Вы можете выбрать книгу, а затем по усмотрению добавить её либо в
-                            лист прочитанных, либо в запланированных.
-                        </div>
+                    <div class="promo__text">
+                        <h1>bookish buddy —</h1>
+                        <p class="promo__descr">место, где книги становятся мостом к дружбе</p>
+                        <button><a href="register.html" class="a_link_main">Поехали!</a></button>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
+        <section class="about" id="about">
+            <div class="container">
+                <div class="about__slide">
+                    <h2 class="title">О нас</h2>
+                    <div class="blocks__about">
+
+                        <div class="block__about">
+                            <div class="block__about__img"><img src="./img/book_heart.svg" alt=""></div>
+                            <div class="block__about__text">
+                                <p>Собирай полку из полюбившихся книг</p>
+                            </div>
+                        </div>
+
+                        <div class="block__about">
+                            <div class="block__about__img"><img src="./img/bokks.svg" alt=""></div>
+                            <div class="block__about__text">
+                                <p>Составляй списки для дальнейшего чтения</p>
+                            </div>
+                        </div>
+
+                        <div class="block__about">
+                            <div class="block__about__img"><img src="./img/book_pageup.svg" alt=""></div>
+                            <div class="block__about__text">
+                                <p>Оставляй свои впечатления о прочитанном</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="questions" id="questions">
+            <div class="container">
+                <div class="questions__slide">
+                    <h2 class="title">Часто задаваемые вопросы</h2>
+                    <div class="accordion" id="accordion-1" style="max-width: 800px; margin: 0 auto;">
+                        <div class="accordion__item accordion__item_show">
+                            <div class="accordion__header">
+                                По какому принципу работает Ваша система?
+                            </div>
+                            <div class="accordion__body">
+                                В нашей системе авторизированные пользователи имеют возможность составлять свои списки
+                                книг
+                                и управлять ими.
+                            </div>
+                        </div>
+                        <div class="accordion__item">
+                            <div class="accordion__header">
+                                Какие данные требуются для регистрации?
+                            </div>
+                            <div class="accordion__body">
+                                Для регистрации необходим номер телефона, а также надежный пароль. Эти личные данные
+                                останутся в системе недоступными для других пользователей.
+                            </div>
+                        </div>
+                        <div class="accordion__item">
+                            <div class="accordion__header">
+                                О каких списках идет речь?
+                            </div>
+                            <div class="accordion__body">
+                                Из виртуальной библиотеки Вы можете выбрать книгу, а затем по усмотрению добавить её
+                                либо в
+                                лист прочитанных, либо в запланированных.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     <footer>
         <div class="container">
             <div class="footer__slide">
