--- a/public/readit.html
+++ b/public/readit.html
@@ -28,14 +28,16 @@
             </div>
         </div>
     </header>
-    <section>
-        <div class="container">
-            <div class="plans__slide">
-                <h2 class="title">Список "Прочитанные книги"</h2>
-                <ul id="ReadIt"></ul>
+    <main>
+        <section>
+            <div class="container">
+                <div class="plans__slide">
+                    <h2 class="title">Список "Прочитанные книги"</h2>
+                    <ul id="ReadIt"></ul>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <div class="footer__slide">
