--- a/public/register.html
+++ b/public/register.html
@@ -27,15 +27,17 @@
             </div>
         </div>
     </header>
-    <section class="avt_log">
-        <h1 class="h1__ar">Регистрация</h1>
-        <input type="text" id="username" placeholder="Имя" required>
-        <input type="email" id="email" placeholder="email" required>
-        <input type="password" id="password" placeholder="Пароль" required>
-        <button id="registerButton">Зарегистрироваться</button>
-        <a href="auth.html" class="a__avt">Войти, если есть аккаунт</a>
+    <main>
+        <section class="avt_log">
+            <h1 class="h1__ar">Регистрация</h1>
+            <input type="text" id="username" placeholder="Имя" required>
+            <input type="email" id="email" placeholder="email" required>
+            <input type="password" id="password" placeholder="Пароль" required>
+            <button id="registerButton">Зарегистрироваться</button>
+            <a href="auth.html" class="a__avt">Войти, если есть аккаунт</a>
 
-    </section>
+        </section>
+    </main>
     <footer>
         <div class="container">
             <div class="footer__slide">
