--- a/public/plans.html
+++ b/public/plans.html
@@ -28,14 +28,18 @@
             </div>
         </div>
     </header>
-    <section>
-        <div class="container">
-            <div class="plans__slide">
-                <h2 class="title">Список "Хочу прочитать"</h2>
-                <ul id="Plans"></ul>
-            </div>
-        </div>
-    </section>
+    <main>
+        <main>
+            <section>
+                <div class="container">
+                    <div class="plans__slide">
+                        <h2 class="title">Список "Хочу прочитать"</h2>
+                        <ul id="Plans"></ul>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </main>
     <footer>
         <div class="container">
             <div class="footer__slide">
