--- a/public/search.html
+++ b/public/search.html
@@ -32,6 +32,10 @@
         <main>
             <section class="choice">
                 <div class="container">
+                    <div class="links__list">
+                        <a href="readit.html" class="a__avt">Перейти в список прочитанных книг</a>
+                        <a href="plans.html" class="a__avt">Перейти в список запланированных книг</a>
+                    </div>
                     <div class="search">
                         <input type="text" id="book__card__info" placeholder="Начать поиск">
                     </div>
